# claude-automata

./: .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION.md  LICENSE  README.ko.md  README.md  copier.yml  create.py  log.md  poc_prompt.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: commit.md
.claude/hooks/: format-and-lint.sh
.claude/skills/commit/: SKILL.md
.claude/skills/translate-prompt/: SKILL.md
design/: DESIGN.md  data-model.md  directory-structure.md  encapsulation.md  flows.md  requirements-traceability.md  root.md
design/components/: cognitive-load-trigger.md  hook-system.md  purpose-engine.md  self-improvement.md  slack-client.md  state-manager.md  supervisor.md  tui.md
docs/: ai-automata-definition.md  claude-automata-requirements.md  uv-and-claude-max-research.md
hooks/: hooks.json
plugins/boost/scripts/: supervisor-prompt.md  supervisor.sh
plugins/booster/.claude-plugin/: plugin.json
plugins/booster/hooks/: hooks.json
plugins/parallax/: README.ko.md  README.md  architecture.mmd  poc_capture.py  pyproject.toml
plugins/parallax/src/: main.py  (+4 more)
poc/state_persistence/: settings.json
poc/stop_hook/: settings.json
scripts/: claude-with-context.py
src/: .gitignore  README.md  pyproject.toml
src/.claude/: settings.json
src/.claude/rules/: mission-protocol.md  purpose.md  self-improvement.md
src/cli/: main.py
src/setup/: slack_manifest.yaml
src/setup/launchd/: com.clomia.automata.supervisor.plist  com.clomia.automata.watchdog.plist
src/system/: __init__.py  cognitive_load.py  error_classifier.py  session_manager.py  slack_client.py  state_manager.py  supervisor.py  watchdog.py
src/system/hooks/: on_notification.py  on_session_start.py  on_stop.py
src/tests/: conftest.py  test_cognitive_load.py  test_error_classifier.py  test_hooks.py  test_state_manager.py
src/tui/: app.py
(+16 files in other folders)
